introduced the images and also a footer

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
     <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times
     </figcaption>
 </figure>
-<p><strong>Dennis Overbye</strong> </p>
+
 <div class="inline"> 
-    <p>March 17, 2014</p>
+    <span> March 17, 2014</span>
     <div class="share_icons">
         <i class="fa fa-facebook" aria-hidden="true"></i>
         <i class="fa fa-twitter" aria-hidden="true"></i>
         <i class="fa fa-envelope" aria-hidden="true"></i>
         <i class="fa fa-share" aria-hidden="true"></i>
         <i class="fa fa-bookmark-o" aria-hidden="true"></i>
+        <i class="fa fa-commenting-o" aria-hidden="true"></i>
     </div>
 </div>
 <div class="all_articles">
@@ -83,6 +84,11 @@
             </article><br>
             <article>“The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.
             </article><br>
+            <figure>
+            <img src="18cosmos-2-superJumbo.jpg" alt="">
+           <figcaption>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.Credit...Steffen Richter/Associated Press
+           </figcaption>
+          </figure>
             <article>Physicists recognize four forces at work in the world today: gravity, electromagnetism, and strong and weak nuclear forces. But they have long suspected that those are simply different manifestations of a single unified force that ruled the universe in its earliest, hottest moments.
             As the universe cooled, according to this theory, there was a fall from grace, like some old folk mythology of gods or brothers falling out with each other. The laws of physics evolved, with one force after another splitting away.
             That was where Dr. Guth came in.
@@ -97,6 +103,120 @@
             We might never know what happened before inflation, at the very beginning, because inflation erases everything that came before it. All the chaos and randomness of the primordial moment are swept away, forever out of our view.
             “If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”
             </article><br>
-</div>
+        </div>
+        <div class="container_cards">
+                <hr>
+                <div class="cards">
+                <figure class="first_card">
+                  <img src="23CHINAMOON3-threeByTwoSmallAt2X.jpg" alt="">
+                  <p>China Launches Moon Mission to Bring Back Lunar Rocks</p>
+                </figure>
+                <figure class="second_card">
+                    <img src="19OUTTHERE-ARECIBO1-threeByTwoSmallAt2X-v3.jpg" alt="">
+                    <p>Arecibo Observatory, a Great Eye on the Cosmos, Is Going Dark</p>
+                </figure>
+                <figure class="third_card">
+                    <img src="20SCI-MARS-VOLCANO1-threeByTwoSmallAt2X.jpg" alt="">
+                    <p>Signs of Recent Volcanic Eruption on Mars Hint at Habitats for Life</p>
+                </figure>
+                <figure class="fourth_card">
+                    <img src="merlin_180070305_4ba184d7-2b5e-43a3-a54c-7236af58744d-threeByTwoSmallAt2X.jpg" alt="">
+                    <p>SpaceX’s ‘Resilience’ Lifts 4 Astronauts Into New Era of Spaceflight</p>
+                </figure>
+                <figure class="fifth_card">
+                    <img src="11SCI-BIOMINING-threeByTwoSmallAt2X.jpg" alt="">
+                    <p>These Microbes May Help Future Martians and Moon People Mine Metals</p>
+                </figure>
+                <figure class="sixth_card">
+                    <img src="31SCI-ISS-FEATURE13-threeByTwoSmallAt2X.jpg" alt="">
+                    <p>How the Space Station Became a Base to Launch Humanity’s Future</p>
+                </figure>
+            </div>
+        </div>
+        <footer>
+            <div class="footer_heading">
+                <hr>
+                <p>THe New York Times</p>
+            </div>
+            <div class="footer_details">
+                    <div class="first_footer">
+                       <p>NEWS</p>
+                       <p>Home Page</p> 
+                       <p> World</p>
+                       <p> U.S.</p>
+                       <p>Politics</p> 
+                       <p>Election Results</p> 
+                       <p>New York</p>
+                       <p>Business</p>
+                       <p>Tech</p> 
+                       <p>Science</p> 
+                       <p>Sports</p>  
+                       <p>Obituaries</p> 
+                       <p>Today's Paper</p> 
+                       <p>Corrections</p> 
+                    </div>
+                    <div class="second_footer">
+                       <p> OPINION</p>
+                       <p>Today's Opinion</p> 
+                       <p>Op-Ed Columnists</p> 
+                       <p>Editorials</p> 
+                       <p>Op-Ed Contributors</p> 
+                       <p>Letters</p>  
+                       <p>Sunday Review</p> 
+                       <p>Video: Opinion</p> 
+                    </div>
+                    <div class="third_footer">
+                        <p>ARTS</p> 
+                       <p>Today's Arts</p> 
+                       <p> Art & Design</p>
+                      <p>Books</p> 
+                      <p>Dance</p> 
+                       <p> Movies</p>
+                      <p>Music</p>  
+                       <p>Pop Culture</p> 
+                       <p>Television</p> 
+                       <p>Theater</p> 
+                       <p>Video: Arts</p>
+                    </div>
+                    <div class="forth_footer">
+                      <p> LIVING</p> 
+                      <p>At Home</p>  
+                      <p>Automobiles</p> 
+                      <p> Games</p>
+                      <p>Education</p> 
+                      <p>Food</p>
+                      <p>Health</p> 
+                       <p> Jobs</p>
+                       <p> Love</p>
+                       <p> Magazine</p>
+                       <p>Parenting</p> 
+                       <p>Real Estate</p> 
+                       <p>Recipes</p> 
+                       <p> Style</p>
+                       <p>T Magazine</p> 
+                       <p>Travel</p> 
+                    </div>
+                    <div class="fifth_footer">
+                       <p> MORE</p>
+                       <p>Reader Center</p> 
+                       <p>Wirecutter</p> 
+                       <p>Live Events</p> 
+                       <p>The Learning Network</p> 
+                       <p>Tools & Services</p> 
+                        <p>Multimedia</p> 
+                       <p>Photography</p> 
+                       <p>Video</p> 
+                       <p>Newsletters</p> 
+                       <p>TimesMachine</p>
+                        <p>NYT Store</p> 
+                       <p>Times Journeys</p> 
+                       <p>Manage My Account</p> 
+                    </div>
+            </div>
+            <div class="footer_bottom"> 
+                <hr>
+                <p> &copy; The NewYork Times Company &nbsp NYTCo &nbsp Contact us &nbsp Work with us &nbsp Advertise &nbsp TBrand Studio &nbsp Your Ad Choices &nbsp Privacy Policy &nbsp Terms and Services &nbsp Terms of Sale &nbsp Site Map &nbsp Help &nbsp Subscriptions</p> 
+            </div>
+        </footer>
 </body>
 </html>
