added the side tag

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
   <figure>
       <h3>Space Ripples Reveal Big Bang’s <br>
           Smoking Gun</h3>
-    <img src="18cosmos-superJumbo.jpg" alt="">
+    <img src="images/18cosmos-superJumbo.jpg" alt="">
     <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times
     </figcaption>
 </figure>
-
 <div class="inline"> 
     <span> March 17, 2014</span>
     <div class="share_icons">
@@ -42,6 +41,29 @@
         <i class="fa fa-commenting-o" aria-hidden="true"></i>
     </div>
 </div>
+<aside class="editors_picks">
+    <div class="editor_heading">
+        <p>Editors' Picks</p>
+    </div>
+    <figure>
+        <img src="images/23travel-portugal-promo-square640-v3.jpg" alt="">
+        <figcaption>
+            <a href="#">Snapshots of daily life in a remote region of Portugal</a>
+        </figcaption>
+    </figure>
+    <figure>
+        <img src="images/22anthony-hopkins1-square640.jpg" alt="">
+        <figcaption>
+            <a href="#">Anthony Hopkins makes it look simple (And maybe it should be)</a>
+        </figcaption>
+    </figure>
+    <figure>
+        <img src="images/23sp-smallbiz-support-square640-v4.jpg" alt="">
+        <figcaption>
+            <a href="#">9 Ways to support small businesses</a>
+        </figcaption>
+    </figure>
+</aside>
 <div class="all_articles">
             <article>CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
             He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.  If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
@@ -108,27 +130,27 @@
                 <hr>
                 <div class="cards">
                 <figure class="first_card">
-                  <img src="23CHINAMOON3-threeByTwoSmallAt2X.jpg" alt="">
+                  <img src="images/23CHINAMOON3-threeByTwoSmallAt2X.jpg" alt="">
                   <p>China Launches Moon Mission to Bring Back Lunar Rocks</p>
                 </figure>
                 <figure class="second_card">
-                    <img src="19OUTTHERE-ARECIBO1-threeByTwoSmallAt2X-v3.jpg" alt="">
+                    <img src="images/19OUTTHERE-ARECIBO1-threeByTwoSmallAt2X-v3.jpg" alt="">
                     <p>Arecibo Observatory, a Great Eye on the Cosmos, Is Going Dark</p>
                 </figure>
                 <figure class="third_card">
-                    <img src="20SCI-MARS-VOLCANO1-threeByTwoSmallAt2X.jpg" alt="">
+                    <img src="images/20SCI-MARS-VOLCANO1-threeByTwoSmallAt2X.jpg" alt="">
                     <p>Signs of Recent Volcanic Eruption on Mars Hint at Habitats for Life</p>
                 </figure>
                 <figure class="fourth_card">
-                    <img src="merlin_180070305_4ba184d7-2b5e-43a3-a54c-7236af58744d-threeByTwoSmallAt2X.jpg" alt="">
+                    <img src="images/merlin_180070305_4ba184d7-2b5e-43a3-a54c-7236af58744d-threeByTwoSmallAt2X.jpg" alt="">
                     <p>SpaceX’s ‘Resilience’ Lifts 4 Astronauts Into New Era of Spaceflight</p>
                 </figure>
                 <figure class="fifth_card">
-                    <img src="11SCI-BIOMINING-threeByTwoSmallAt2X.jpg" alt="">
+                    <img src="images/11SCI-BIOMINING-threeByTwoSmallAt2X.jpg" alt="">
                     <p>These Microbes May Help Future Martians and Moon People Mine Metals</p>
                 </figure>
                 <figure class="sixth_card">
-                    <img src="31SCI-ISS-FEATURE13-threeByTwoSmallAt2X.jpg" alt="">
+                    <img src="images/31SCI-ISS-FEATURE13-threeByTwoSmallAt2X.jpg" alt="">
                     <p>How the Space Station Became a Base to Launch Humanity’s Future</p>
                 </figure>
             </div>
@@ -214,8 +236,8 @@
                     </div>
             </div>
             <div class="footer_bottom"> 
-                <hr>
                 <p> &copy; The NewYork Times Company &nbsp NYTCo &nbsp Contact us &nbsp Work with us &nbsp Advertise &nbsp TBrand Studio &nbsp Your Ad Choices &nbsp Privacy Policy &nbsp Terms and Services &nbsp Terms of Sale &nbsp Site Map &nbsp Help &nbsp Subscriptions</p> 
+                <hr>
             </div>
         </footer>
 </body>
