added the the thoery of inflation container

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </div>
 </div>
 <aside class="editors_picks">
-    <div class="editor_heading">
-        <p>Editors' Picks</p>
-    </div>
     <figure>
+        <div class="editor_heading">
+            <p>Editors' Picks</p>
+        </div>
         <img src="images/23travel-portugal-promo-square640-v3.jpg" alt="">
         <figcaption>
             <a href="#">Snapshots of daily life in a remote region of Portugal</a>
@@ -77,6 +77,16 @@
             The ripples manifested themselves as faint spiral patterns in a bath of microwave radiation that permeates space and preserves a picture of the universe when it was 380,000 years old and as hot as the surface of the sun.
             Dr. Kovac and his collaborators, working in an experiment known as Bicep, for Background Imaging of Cosmic Extragalactic Polarization, reported their results in a scientific briefing at the Center for Astrophysics here on Monday and in a set of papers submitted to The Astrophysical Journal.
             </article><br>
+            <div class="inflation_container">
+                <div class="inflation_header">
+                    <h5>The Theory of Inflation</h5>
+                    <p>Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</p>
+                </div>
+                <figure>
+                    <img src="images/inflation-945.png" alt="">
+                </figure>
+            
+            </div>
             <article>
             Dr. Kovac said the chance that the results were a fluke was only one in 10 million.
             Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his lifetime.  </article> 
@@ -107,7 +117,7 @@
             <article>“The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.
             </article><br>
             <figure>
-            <img src="18cosmos-2-superJumbo.jpg" alt="">
+            <img src="images/18cosmos-2-superJumbo.jpg" alt="">
            <figcaption>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.Credit...Steffen Richter/Associated Press
            </figcaption>
           </figure>
@@ -162,7 +172,7 @@
             </div>
             <div class="footer_details">
                     <div class="first_footer">
-                       <p>NEWS</p>
+                       <p class="detail_header">NEWS</p>
                        <p>Home Page</p> 
                        <p> World</p>
                        <p> U.S.</p>
@@ -178,7 +188,7 @@
                        <p>Corrections</p> 
                     </div>
                     <div class="second_footer">
-                       <p> OPINION</p>
+                       <p class="detail_header"> OPINION</p>
                        <p>Today's Opinion</p> 
                        <p>Op-Ed Columnists</p> 
                        <p>Editorials</p> 
@@ -188,7 +198,7 @@
                        <p>Video: Opinion</p> 
                     </div>
                     <div class="third_footer">
-                        <p>ARTS</p> 
+                        <p class="detail_header">ARTS</p> 
                        <p>Today's Arts</p> 
                        <p> Art & Design</p>
                       <p>Books</p> 
@@ -201,7 +211,7 @@
                        <p>Video: Arts</p>
                     </div>
                     <div class="forth_footer">
-                      <p> LIVING</p> 
+                      <p class="detail_header"> LIVING</p> 
                       <p>At Home</p>  
                       <p>Automobiles</p> 
                       <p> Games</p>
@@ -219,7 +229,7 @@
                        <p>Travel</p> 
                     </div>
                     <div class="fifth_footer">
-                       <p> MORE</p>
+                       <p class="deatil_header">MORE</p>
                        <p>Reader Center</p> 
                        <p>Wirecutter</p> 
                        <p>Live Events</p> 
