--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </article><br>
             <article>“The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.
             </article><br>
-            <figure>
+            <figure class="article_center">
             <img src="images/18cosmos-2-superJumbo.jpg" alt="">
            <figcaption>The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.Credit...Steffen Richter/Associated Press
            </figcaption>
