debugged linters errors

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       “It was a very special moment, and one we took very seriously as scientists,” said Dr. Kovac, who chose his words as carefully as he tended his radio telescopes.
       Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team, knocked on his door with a bottle of Champagne to tell him the news.
       <br><br>
-      <iframe width="600" height="358" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+      <iframe width="600" height="358" src="https://www.youtube.com/embed/ZlfIVEy_YOA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
        Stanford Professor Andrei Linde celebrates physics breakthroughCredit...CreditVideo by StanfordUniversity<br><br>
       Confused, Dr. Linde called out to his wife, asking if she had ordered anything.
       “And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.
