add change to navbar and footer

--- a/index.html
+++ b/index.html
@@ -53,29 +53,6 @@
       Dr. Kovac and his collaborators, working in an experiment known as Bicep, for Background Imaging of Cosmic Extragalactic Polarization, reported their results in a scientific briefing at the Center for Astrophysics here on Monday and in a set of papers submitted to The Astrophysical Journal.
       <br>
       </article>
-      <aside class="editors_picks">
-        <figure>
-          <div class="editor_heading">
-            <p>Editors' Picks</p>
-         </div>
-          <img src="images/23travel-portugal-promo-square640-v3.jpg" alt="">
-          <figcaption>
-            <a href="#">Snapshots of daily life in a remote region of Portugal</a>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src="images/22anthony-hopkins1-square640.jpg" alt="">
-          <figcaption>
-            <a href="#">Anthony Hopkins makes it look simple (And maybe it should be)</a>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src="images/23sp-smallbiz-support-square640-v4.jpg" alt="">
-          <figcaption>
-            <a href="#">9 Ways to support small businesses</a>
-          </figcaption>
-        </figure>
-      </aside>
      <div class="inflation_container">
        <div class="inflation_header">
          <h5>The Theory of inflation</h5>
@@ -117,7 +94,6 @@
          </div>
         </div>
      </div>
-    
       <article class="all_articles">
       Dr. Kovac said the chance that the results were a fluke was only one in 10 million.
       Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his lifetime.
@@ -127,8 +103,33 @@
       “It was a very special moment, and one we took very seriously as scientists,” said Dr. Kovac, who chose his words as carefully as he tended his radio telescopes.
       Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team, knocked on his door with a bottle of Champagne to tell him the news.
       <br><br>
+      </article>
+      <aside class="editors_picks">
+        <figure>
+          <div class="editor_heading">
+            <p>Editors' Picks</p>
+         </div>
+          <img src="images/23travel-portugal-promo-square640-v3.jpg" alt="">
+          <figcaption>
+            <a href="#">Snapshots of daily life in a remote region of Portugal</a>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="images/22anthony-hopkins1-square640.jpg" alt="">
+          <figcaption>
+            <a href="#">Anthony Hopkins makes it look simple (And maybe it should be)</a>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="images/23sp-smallbiz-support-square640-v4.jpg" alt="">
+          <figcaption>
+            <a href="#">9 Ways to support small businesses</a>
+          </figcaption>
+        </figure>
+      </aside>
+      <article class="all_articles">
       <iframe width="600" height="358" src="https://www.youtube.com/embed/ZlfIVEy_YOA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
-       Stanford Professor Andrei Linde celebrates physics breakthroughCredit...CreditVideo by StanfordUniversity<br><br>
+      Stanford Professor Andrei Linde celebrates physics breakthroughCredit...CreditVideo by StanfordUniversity<br><br>
       Confused, Dr. Linde called out to his wife, asking if she had ordered anything.
       “And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.
       Calling from Bonaire, the Dutch Caribbean island, Dr. Linde said he was still hyperventilating. “Having news like this is the best way of spoiling a vacation,” he said.
