--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
     <a href="#"><span class="left_nav_heading">Space  &  Cosmos</span></a>
   </div>
-    <img src="images/logo.png" alt="">
+   <a href="#"><img src="images/logo.png" alt=""></a>
   <div class="btns">
   <a href="#"><button type="button">Subscribe Now</button></a>
    <a href="#"><button type="button">Log In</button></a>
