resolve webhint errors

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   </div>
    <a href="#"><img src="images/logo.png" alt=""></a>
   <div class="btns">
-  <a href="#"><button type="button">Subscribe Now</button></a>
-   <a href="#"><button type="button">Log In</button></a>
+  <button type="button"><a href="#">Subscribe Now</a></button>
+  <button type="button"><a href="#">Log In</a></button>
   </div>
   </nav>
   <figure>
-    <h3><center>Space Ripples Reveal Big Bang’s <br> Smoking Gun</center></h3>
+  <h3>Space Ripples Reveal Big Bang’s <br> Smoking Gun</h3>
   <img src="images/18cosmos-superJumbo.jpg" alt="">
   <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...Rick Friedman for The New York Times
   </figcaption>
@@ -237,7 +237,7 @@
           <div class="first_footer">
              <p class="detail_header">NEWS</p>
              <p><a href="#">Home Page</a></p> 
-             <p><a href="#">World</p>
+             <p><a href="#">World</a></p>
              <p><a href="#">U.S.</a></p>
              <p><a href="#">Politics</a></p> 
              <p> <a href="#">Election Results</a></p> 
