--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </div>
    <a href="#"><img src="images/logo.png" alt=""></a>
   <div class="btns">
-  <button type="button"><a href="#">Subscribe Now</a></button>
-  <button type="button"><a href="#">Log In</a></button>
+    <button type="button">Subscribe Now</button>
+    <button type="button">Log In</button>
   </div>
   </nav>
   <figure>
@@ -280,16 +280,16 @@
               <p><a href="#">Games</a></p>
               <p><a href="#">Education</a></p> 
               <p><a href="#">Food</a></p>
-              <p><a href="#">Health</a> </p> 
-              <p><a href="#">Jobs</a> </p>
-              <p><a href="#"></a>Love</a> </p>
-              <p><a href="#">Magazine</a> </p>
-              <p><a href="#">Parenting</a> </p> 
-              <p><a href="#">Real Estate</a> </p> 
-              <p><a href="#">Recipes</a> </p> 
-              <p><a href="#">Style</a> </p>
-              <p><a href="#">T Magazine</a> </p> 
-              <p><a href="#">Travel</a> </p> 
+              <p><a href="#">Health</a></p> 
+              <p><a href="#">Jobs</a></p>
+              <p><a href="#"></a>Love</a></p>
+              <p><a href="#">Magazine</a></p>
+              <p><a href="#">Parenting</a></p> 
+              <p><a href="#">Real Estate</a></p> 
+              <p><a href="#">Recipes</a></p> 
+              <p><a href="#">Style</a></p>
+              <p><a href="#">T Magazine</a></p> 
+              <p><a href="#">Travel</a></p> 
           </div>
           <div class="fifth_footer">
              <p class="detail_header">MORE</p>
@@ -309,12 +309,12 @@
           </div>
           <div class="sixth_footer">
              <p class="detail_header">SUBSCRIBE</p>
-             <strong>
+             <div class="strong">
                 <p><a href="#">Home Delivery</a></p>
                 <p><a href="#">Digital Subscriptions</a></p>
                 <p><a href="#">Games</a></p>
                 <p><a href="#">Cooking</a></p>
-            </strong>
+              </div>
              <p><a href="#"> Email Newsletters</a></p>
              <p><a href="#">Corporate Subscriptions</a></p>
              <p><a href="#">Education Rate</a></p>
