--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
      </div>
       <article class="all_articles">
-      Dr. Kovac said the chance that the results were a fluke was only one in 10 million.
+      <h6> Dr. Kovac</h6>said the chance that the results were a fluke was only one in 10 million.
       Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his lifetime.
       “With nature, you have to be lucky,” he said. “Apparently we have been lucky.”
       The results are the closely guarded distillation of three years’ worth of observations and analysis. Eschewing email for fear of a leak, Dr. Kovac personally delivered drafts of his work to a select few, meeting with Dr. Guth, who is now a professor at Massachusetts Institute of Technology (as is his son, Larry, who was sleeping that night in 1979), in his office last week.
@@ -282,7 +282,7 @@
               <p><a href="#">Food</a></p>
               <p><a href="#">Health</a></p> 
               <p><a href="#">Jobs</a></p>
-              <p><a href="#"></a>Love</a></p>
+              <p><a href="#">Love</a></p>
               <p><a href="#">Magazine</a></p>
               <p><a href="#">Parenting</a></p> 
               <p><a href="#">Real Estate</a></p> 
