fixed all validation errors and added images alt attributes

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <footer>
       <div class="footer_heading">
         <hr>
-        <img src="images/logo.png" alt="NewYork Times Logo">
+        <center><img src="images/logo.png" alt="NewYork Times Logo"></center>
       </div>
       <div class="footer_details">
           <div class="first_footer">
