--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <footer>
       <div class="footer_heading">
         <hr>
-        <center><img src="images/logo.png" alt="NewYork Times Logo"></center>
+        <img src="images/logo.png" alt="NewYork Times Logo" style="align-content: center">
       </div>
       <div class="footer_details">
           <div class="first_footer">
