--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </aside>
       <article class="all_articles">
       <iframe width="600" height="358" src="https://www.youtube.com/embed/ZlfIVEy_YOA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
-      Stanford Professor Andrei Linde celebrates physics breakthroughCredit...CreditVideo by StanfordUniversity<br><br>
+      <h2>Stanford Professor</h2><br>Andrei Linde celebrates physics breakthroughCredit...CreditVideo by StanfordUniversity<br><br>
       Confused, Dr. Linde called out to his wife, asking if she had ordered anything.
       “And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.
       Calling from Bonaire, the Dutch Caribbean island, Dr. Linde said he was still hyperventilating. “Having news like this is the best way of spoiling a vacation,” he said.
