--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
     <footer>
       <div class="footer_heading">
         <hr>
-        <img src="images/logo.png" alt="NewYork Times Logo" style="align-content: center">
       </div>
       <div class="footer_details">
           <div class="first_footer">
+             <img src="images/logo.png" alt="NewYork Times Logo" style="align-content: left">
              <p class="detail_header">NEWS</p>
              <p><a href="#">Home Page</a></p> 
              <p><a href="#">World</a></p>
