--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </div>
       <div class="footer_details">
           <div class="first_footer">
-             <img src="images/logo.png" alt="NewYork Times Logo" style="align-content: left">
+             <img src="images/logo.png" alt="NewYork Times Logo">
              <p class="detail_header">NEWS</p>
              <p><a href="#">Home Page</a></p> 
              <p><a href="#">World</a></p>
@@ -308,6 +308,7 @@
              <p><a href="#">Manage My Account</a> </p> 
           </div>
           <div class="sixth_footer">
+            <vh>
              <p class="detail_header">SUBSCRIBE</p>
              <div class="strong">
                 <p><a href="#">Home Delivery</a></p>
