--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
              <p><a href="#">Manage My Account</a> </p> 
           </div>
           <div class="sixth_footer">
-            <vh>
+            <hr width="1" size="500">
              <p class="detail_header">SUBSCRIBE</p>
              <div class="strong">
                 <p><a href="#">Home Delivery</a></p>
