--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </div>
       <div class="footer_details">
           <div class="first_footer">
-             <img src="images/logo.png" alt="NewYork Times Logo">
+             <img src="images/logo.png" alt="NewYork Times Logo" style="align-content: left"><br>
              <p class="detail_header">NEWS</p>
              <p><a href="#">Home Page</a></p> 
              <p><a href="#">World</a></p>
@@ -307,7 +307,7 @@
              <p><a href="#">Times Journeys</a> </p> 
              <p><a href="#">Manage My Account</a> </p> 
           </div>
-          <div class="sixth_footer">
+          <div class="sixth_footer" style="display:inline-block">
             <hr width="1" size="500">
              <p class="detail_header">SUBSCRIBE</p>
              <div class="strong">
