--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="footer_heading">
         <hr>
       </div>
-      <img src="images/logo.png" alt="NewYork Times Logo" class="footer_logo" style="align-content: start"><br>
+      <span class="footer_logo"><img src="images/logo.png" alt="NewYork Times Logo" style="align-content: start"><span><br>
       <div class="footer_details">
           <div class="first_footer">
              <p class="detail_header">NEWS</p>
