--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
     </div>
   </div>
     <footer>
-      <div class="footer_heading">
+      <div class="footer_heading footer_logo">
       <hr>
-      <span class="footer_logo"><img src="images/logo.png" alt="NewYork Times Logo" style="align-content: start"><span><br>
+      <img src="images/logo.png" alt="NewYork Times Logo" style="align-content: start"><br>
       </div>
       <div class="footer_details">
           <div class="first_footer">
