--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
       </figure>
     </div>
   </div>
+  <hr>
     <footer>
-      <div class="footer_heading footer_logo">
-      <hr>
-      <img src="images/logo.png" alt="NewYork Times Logo" style="align-content: start"><br>
+      <div class="footer_heading">
+      <img src="images/logo.png" alt="NewYork Times Logo"><br>
       </div>
       <div class="footer_details">
           <div class="first_footer">
