add footer last section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </article><br>
     <div class="container_cards">
         <hr>
-        <p>More in Space and Astronomy</p>
+        <p><a href="#">More in Space and Astronomy</p>
         <div class="cards">
         <figure class="first_card">
           <img src="images/23CHINAMOON3-threeByTwoSmallAt2X.jpg" alt="">
@@ -200,7 +200,7 @@
     </div>
     <div class="container_cards">
       <hr>
-      <p>Suggested Newsletters for you</p>
+      <p><a href="#">Suggested Newsletters for you</a></p>
       <div class="cards">
       <figure class="first_card">
         <img src="images/23CHINAMOON3-threeByTwoSmallAt2X.jpg" alt="">
@@ -326,6 +326,9 @@
              <p><a href="#">Español</a></p>
              <p><a href="#">中文网</a></p>
           </div>
+        </div>
+        <div class="footer_bottom">
+          <p>© 2020 The New York Times Company &nbsp NYTCoContact Us  &nbsp Work with us &nbsp Advertise &nbsp T Brand Studio &nbsp Your Ad Choices &nbsp Privacy Policy &nbsp Terms of Service &nbsp Terms of Sale &nbsp Site Map &nbsp Help &nbsp Subscriptions</p>
         </div>
       <div class="sticky_footer">
         <p>Access More of The Times by creating a free account and logging in</p>
