solve linters errors

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           </div>
         </div>
         <div class="footer_bottom">
-          <p>© 2020 The New York Times Company &nbsp NYTCoContact Us  &nbsp Work with us &nbsp Advertise &nbsp T Brand Studio &nbsp Your Ad Choices &nbsp Privacy Policy &nbsp Terms of Service &nbsp Terms of Sale &nbsp Site Map &nbsp Help &nbsp Subscriptions</p>
+          <p>© 2020 The New York Times Company &nbsp; NYTCoContact Us  &nbsp; Work with us &nbsp; Advertise &nbsp; T Brand Studio &nbsp; Your Ad Choices &nbsp; Privacy Policy &nbsp; Terms of Service &nbsp; Terms of Sale &nbsp; Site Map &nbsp; Help &nbsp; Subscriptions</p>
         </div>
       <div class="sticky_footer">
         <p>Access More of The Times by creating a free account and logging in</p>
